modified application.properties bd settings

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,18 +1,16 @@
 spring.application.name=Heritage Innovative Solutions Web Application Production  
  
 server.port=8080
-
-
-#spring.datasource.driverClassName=${HISOLUTIONS_DB_DRIVER}com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-  
-###  Database Connection Settings ### 
+ 
+### AWS Database Connection Settings ###
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver 
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect  
 
 spring.datasource.url=${HISOLUTIONS_DB_HOST}
 spring.datasource.username=${HISOLUTIONS_DB_USERNAME}
-spring.datasource.password=${HISOLUTIONS_DB_PASSWORD}    
-#spring.jpa.properties.hibernate.dialect=${HISOLUTIONS_DB_DIALECT} 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.datasource.password=${HISOLUTIONS_DB_PASSWORD}     
 
 ### End Database Connection Settings ### 
 
