modified application.properties bd settings

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -9,8 +9,8 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect  
 
 spring.datasource.url=${HISOLUTIONS_DB_HOST}
-spring.datasource.username=${HISOLUTIONS_DB_USERNAME}
-spring.datasource.password=${HISOLUTIONS_DB_PASSWORD}     
+#spring.datasource.username=${HISOLUTIONS_DB_USERNAME}
+#spring.datasource.password=${HISOLUTIONS_DB_PASSWORD}     
 
 ### End Database Connection Settings ### 
 
