--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -83,11 +83,11 @@
             <artifactId>hisolutions-auth-forms</artifactId>
             <version>${project.parent.version}</version> 
         </dependency>  -->
-        <dependency>
+<!--        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>hisolutions-storage</artifactId>
             <version>${project.parent.version}</version> 
-        </dependency> 
+        </dependency> -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>hisolutions-frontend</artifactId>
